# fishbowl-esp32c3

./: Cargo.toml  diagram.json  wokwi.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh
src/: main.rs
