[package]
name = "fishbowl-esp32c3"
version = "0.1.0"
authors = ["cuprumwz <cuprumwz@foxmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = { version = "0.14.0", features = ["embassy", "embassy-executor-thread", "embassy-time-timg0"] }
# esp-backtrace = { version = "0.10.0", default-features = false, features = ["esp32c3", "panic-handler", "exception-handler", "defmt-espflash", "print-jtag-serial", "colors"] }
# esp-println = { version = "0.8.0", default-features = false, features = ["esp32c3", "defmt-espflash", "jtag-serial", "colors"] }
esp-backtrace = { version = "0.10.0", default-features = false, features = ["esp32c3", "panic-handler", "exception-handler", "print-jtag-serial", "colors"] }
esp-println = { version = "0.8.0", default-features = false, features = ["esp32c3", "critical-section", "jtag-serial", "log", "colors"] }
log = { version = "0.4.20" }
esp-alloc = { version = "0.3.0" }
esp-wifi  = { version = "0.2.0", features = ["esp32c3", "wifi"] }
smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.6.1"
heapless = { version = "0.7.17", default-features = false }

embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-hal-1 = { version = "=1.0.0-rc.2", package = "embedded-hal" }
embedded-hal-async = "1.0.0-rc.2"
embedded-io-async = "0.6.1"

embassy-executor = { version = "0.4.0", features = ["nightly"] }
embassy-sync = { version = "0.5.0" }
embassy-time = { version = "0.2.0" }

minimq = "0.8.0"
